config/k8s-resource/policies/agent-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: agent-network-policy
  namespace: varmor
spec:
  podSelector:
    matchLabels:
      app: varmor
      app.kubernetes.io/name: varmor-agent
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: varmor-manager
    ports:
    - protocol: TCP
      port: 8080
