config/k8s-resource/policies/manager-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: manager-network-policy
  namespace: varmor
spec:
  podSelector:
    matchLabels:
      app: varmor
      app.kubernetes.io/name: varmor-manager
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: varmor-agent
    ports:
    - protocol: TCP
      port: 8080
